# QRAM-Simulator

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  BindUtils_8h.html  BindUtils_8h_source.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Doxyfile  IMPLEMENTATION_REPORT.md  README.md  README_pypi.md  all_test.sh  annotated_dup.js  architecture.md  basic__components_8h.html  basic__components_8h.js  basic__gates_8h.html  basic__gates_8h.js  basic__gates_8h_source.html  classes.html  classqram__simulator_1_1SelfAdjointOperator-members.html  classqram__simulator_1_1SelfAdjointOperator.html  condrot_8h.js  core_8cpp.js  core_8h.js  core_8h_source.html  debugger_8h.html  debugger_8h.js  dir_10a024ff2515e1bf97e9e7ee30cdd43f.html  dir_10a024ff2515e1bf97e9e7ee30cdd43f.js  dir_2ccd5861c57cbcf50dc559537ba0b425.html  dir_2ccd5861c57cbcf50dc559537ba0b425.js  dir_4c709a9527a01ea40f52cb315bd4c57a.js  dir_6212950815ba06e6637781a2413662ac.html  dir_9bd50c3d057ab47c2e36edad01d135de.html  (+261 more)
.cibuildwheel-hooks/: inject_stubs.py  post-hook.sh  pre-hook.sh
.github/: PULL_REQUEST_TEMPLATE.md
Experiments/: CMakeLists.txt
Experiments/CKS/: CMakeLists.txt  HamiltonianSimulationTest.cpp  HamiltonianSimulationTest_Noisy.cpp  cks_cutest.cu
Experiments/ErrorFiltration/: CMakeLists.txt  testMultiEFQRAM.cpp
Experiments/GHZ/: CMakeLists.txt  GHZTest.cpp
Experiments/GPUTime/: CMakeLists.txt  block_encoding_test.cu  cks_test.cu  parallel_test.cu  qda_test.cu
Experiments/Grover/: CMakeLists.txt  GroverTest.cpp
Experiments/QCNN/: CMakeLists.txt  QCNNTest.cpp
Experiments/QDA/: CMakeLists.txt  qda_cutest.cu
Experiments/QDA/QDATest/: CMakeLists.txt  QDATest.cpp  QDATest2.cpp
Experiments/QDA/QDA_Poiseuille/: CMakeLists.txt  PoiseuilleModuleTest.cpp  PoiseuilleQDATest.cpp  PoiseuilleTestUtils.h
Experiments/QDA/QDA_Simple/: CMakeLists.txt  QDA_Simple.cpp  QDA_Simple.cu
Experiments/QFT/: CMakeLists.txt  QFTTest.cpp
Experiments/QRAM/: CMakeLists.txt
Experiments/QRAM/QRAMFidelity/: CMakeLists.txt  QRAMFidelityTest.cpp
Experiments/QRAM/QRAMFidelityV2/: CMakeLists.txt  QRAMSimulatorTest.cpp
Experiments/QRAM/QRAM_Qubit/: CMakeLists.txt  QRAMQubitGeneralTest.cpp
Experiments/QRAM/TimeStep_BadRange/: CMakeLists.txt  TimeStep_BadRange_Test.cpp
Experiments/Shor/: CMakeLists.txt  ShorTest.cpp
Experiments/StatePreparation/: CMakeLists.txt  StatePreparationTest.cpp
PySparQ/: BindUtils.h  CMakeLists.txt  core.cpp
PySparQ/dynamic_operator/: README.md  __init__.py  compiler.py  operator_wrapper.py
PySparQ/include/: core.h  qda_algo.h
PySparQ/pysparq/: __init__.py  __init__.pyi  _core.pyi  _hooks.py
PySparQ/pysparq/algorithms/: REFACTORING_NOTES.md  __init__.py  __init__.pyi  block_encoding.py  block_encoding.pyi  cks_solver.py  cks_solver.pyi  grover.py  grover.pyi  qda_solver.py  qda_solver.pyi  qram_utils.py  qram_utils.pyi  shor.py  shor.pyi  state_preparation.py  state_preparation.pyi
PySparQ/pysparq/dynamic_operator/: __init__.py  compiler.py  operator_wrapper.py
PySparQ/pysparq/operators/: __init__.py  base.py  condition_mixin.py
PySparQ/pysparq/test/: __init__.py  conftest.py
PySparQ/src/: CMakeLists.txt  core.cpp  qda_algo.cpp
PySparQ/test/: conftest.py  test_doc_examples.py
PySparQ/test/algorithms/: __init__.py  conftest.py  test_block_encoding.py  test_cks_integration.py  test_cks_solver.py  test_cks_solver_v2.py  test_condition_mixin.py  test_grover.py  test_qda_integration.py  test_qda_solver.py  test_qram_utils.py  test_shor.py  test_state_preparation.py  test_state_preparation_v2.py
QRAM/src/: CMakeLists.txt  qram_branch_qubit.cpp  qram_branch_qutrit.cpp  qram_circuit_qutrit.cpp  time_step.cpp
SparQ/src/: CMakeLists.txt  basic_components.cpp  basic_gates.cpp  condrot.cpp  dark_magic.cpp  debugger.cpp  hadamard.cpp  parallel_phase_operations.cpp  partial_trace.cpp  qft.cpp  qram.cpp  quantum_arithmetic.cpp  quantum_interfere_basic.cpp  rot.cpp  sort_state.cpp  sparse_state_simulator.cpp  system_operations.cpp
SparQ/src/cuda/: basic_components.cu  basic_gates.cu  condrot.cu  cuda_utils.cu  dark_magic.cu  debugger.cu  global_macros.cu  hadamard.cu  parallel_phase_operations.cu  partial_trace.cu  qft.cu  qram.cu  quantum_arithmetic.cu  quantum_interfere_basic.cu  rot.cu  sort_state.cu  system_operations.cu
SparQ/test/: CMakeLists.txt  basic_gates.cpp  condrot.cpp  hadamard.cpp  qft.cpp  quantum_arithmetic.cpp  test_dynamic_operator.cpp
SparQ_Algorithm/src/: CMakeLists.txt  grover.cpp  hamiltonian_simulation.cpp  parallelAA.cpp  qcnn.cpp  shor.cpp  state_preparation.cpp
SparQ_Algorithm/src/BlockEncoding/: block_encoding_tridiagonal.cpp  block_encoding_via_QRAM.cpp
SparQ_Algorithm/src/BlockEncoding/cuda/: block_encoding_tridiagonal.cu  block_encoding_via_QRAM.cu
SparQ_Algorithm/src/DiscreteAdiabatic/: qda_fundamental.cpp  qda_tridiagonal.cpp  qda_via_QRAM.cpp
SparQ_Algorithm/src/DiscreteAdiabatic/cuda/: qda_fundamental.cu
SparQ_Algorithm/src/cuda/: hamiltonian_simulation.cu  state_preparation.cu
api/: BindUtils_8h.html  BindUtils_8h.js  BindUtils_8h_source.html  annotated.html  annotated_dup.js  basic__components_8h.html  basic__components_8h_source.html  basic__gates_8h_source.html  classes.html  classpysparq_1_1DynamicOperatorLoader-members.html  classpysparq_1_1DynamicOperatorLoader.html  classpysparq_1_1DynamicOperatorLoader.js  classqram__simulator_1_1SelfAdjointOperator.html  classqram__simulator_1_1SelfAdjointOperator.js  condrot_8h.html  condrot_8h.js  condrot_8h_source.html  core_8cpp.html  core_8h.html  core_8h_source.html  dark__magic_8h.html  (+359 more)
examples/: CMakeLists.txt  README.md  basic_gates.cpp  dynamic_operator_example.py  dynamic_operator_quantum.py  grover_search.cpp  hello_qram.cpp
test/CPUTest/CommonTest/: CMakeLists.txt  CorrectnessTest.cpp  CorrectnessTest_BlockEncoding.inl  CorrectnessTest_Common.inl  CorrectnessTest_QDA_CompareList.inl  CorrectnessTest_QRAM.inl  ExecutabilityTest.cpp
test/GPUTest/CommonTest/: CMakeLists.txt  CudaExecutabilityTest.cu
(+440 files in other folders)
