[build-system]
requires = ["scikit-build-core>=0.10", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "pysparq"
dynamic = ["version"]
description = "A sparse state quantum circuit simulator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Agony", email = "chenzhaoyun@iai.ustc.edu.cn" }]

dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pybind11_stubgen"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"
cmake.version = ">=3.15"
cmake.build-type = "Release"
wheel.packages = ["PySparQ/pysparq"]
ninja.make-fallback = false
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "PySparQ/pysparq/_version.py"
fallback_version = "0.0.0"


[tool.cibuildwheel]
build-frontend = "build[uv]"
# 暂不支持 32 位系统(size_t != uint64_t)
# 暂时移除 macOS 支持
skip = ["*-musllinux_*", "*-win32", "*-macos*"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-all = "yum install -y libgomp-devel"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
