[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.13",
    "setuptools>=70",
]
build-backend = "scikit_build_core.build"

[project]
name = "pysparq"
dynamic = ["version"]
description = "A sparse state quantum circuit simulator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Agony", email = "chenzhaoyun@iai.ustc.edu.cn" }]

dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pybind11_stubgen"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"
cmake.version = ">=3.15"
cmake.build-type = "Release"
wheel.platlib = true
# wheel.packages is required WITH wheel.platlib to include Python source
# files from PySparQ/pysparq/ in the wheel alongside the compiled .so
# extensions from the CMake install prefix (platlib).
wheel.packages = {pysparq = "PySparQ/pysparq"}
ninja.make-fallback = false
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools]
# Ensure setuptools auto-discovery finds only the pysparq package, not
# C++/CMake dirs that happen to contain Python-like files.
packages = ["pysparq"]

[tool.setuptools.package-dir]
"" = "PySparQ"

[tool.setuptools_scm]
write_to = "PySparQ/pysparq/_version.py"
fallback_version = "0.0.0"


[tool.cibuildwheel]
build-frontend = "build[uv]"
# 暂不支持 32 位系统(size_t != uint64_t)
# 暂时移除 macOS 支持
skip = ["*-musllinux_*", "*-win32", "*-macos*"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-all = "yum install -y libgomp"
before-build = "bash {project}/.cibuildwheel-hooks/pre-hook.sh"
after-build = "bash {project}/.cibuildwheel-hooks/post-hook.sh"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
