add_subdirectory(QDA)
add_subdirectory(QRAM)
add_subdirectory(Grover)
add_subdirectory(StatePreparation)
add_subdirectory(QCNN)
add_subdirectory(QFT)
add_subdirectory(CKS)
add_subdirectory(Shor)
add_subdirectory(GHZ)
add_subdirectory(ErrorFiltration)

if (CUDA_FOUND)
add_subdirectory(GPUTime)
endif()